--- a/index.html
+++ b/index.html
@@ -8,8 +8,31 @@
 		<meta name="author" content="Ivan Nikolić">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+		<link rel="stylesheet" href="style.css">
+
 	</head>
+	
 <body>
+
+	<header class="hero-image">
+		<div class="hero-text">
+			<h1>CRYPTO CURRENCY</h1>
+				<p>Future of digital currencies</p>
+					<button>Sign up</button>
+			</div>
+		</div>
+		<nav class="crumbs">
+    <ul>
+        <li class="crumb"><a href="#">Home</a></li>
+        <li class="crumb"><a href="#">News</a></li>
+		<li class="crumb"><a href="#">Contact</a></li>
+        <li class="crumb"><a href="#">About us</a></li>
+        <li class="crumb"><a href="#">Galery</a></li>
+    </ul>
+</nav>
+
+		
+	</header>
 
 </body>
 </html>
