--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 		
 		<nav class="crumbs">
 		<ul>
-			<li class="crumb"><a href="#">Home</a></li>
-			<li class="crumb"><a href="#">News</a></li>
+			<li class="crumb"><a href="index.html">Home</a></li>
+			<li class="crumb"><a href="news.html">News</a></li>
 			<li class="crumb"><a href="#">Contact</a></li>
 			<li class="crumb"><a href="#">About us</a></li>
 			<li class="crumb"><a href="#">Galery</a></li>
@@ -32,6 +32,7 @@
 		</nav>
 	</header>
 	
+	<main>
 	<div class="main">
 		<h1>1. What is cryptocurrency?</h1>
 		<figure>
@@ -39,16 +40,14 @@
 			<figcaption>Coinbase will offer customers a ‘get paid in crypto’ direct deposit option. How to decide if it’s right for you.Coinbase will offer customers a ‘get paid in crypto’ direct deposit option. How to decide if it’s right for you.</figcaption>
 		</figure>
 		<p>Cryptocurrency is a form of payment that can be exchanged online for goods and services. Many companies have issued their own currencies, often called tokens, and these can be traded specifically for the good or service that the company provides. Think of them as you would arcade tokens or casino chips. You’ll need to exchange real currency for the cryptocurrency to access the good or service.
-		Cryptocurrencies work using a technology called blockchain. Blockchain is a decentralized technology spread across many computers that manages and records transactions. Part of the appeal of this technology is its security.
-		Cryptocurrency is a form of payment that can be exchanged online for goods and services. Many companies have issued their own currencies, often called tokens, and these can be traded specifically for the good or service that the company provides. Think of them as you would arcade tokens or casino chips. You’ll need to exchange real currency for the cryptocurrency to access the good or service. Cryptocurrencies work using a technology called blockchain. Blockchain is a decentralized technology spread across many computers that manages and records transactions. Part of the appeal of this technology is its security.
-		Cryptocurrency is a form of payment that can be exchanged online for goods and services. Many companies have issued their own currencies, often called tokens, and these can be traded specifically for the good or service that the company provides. Think of them as you would arcade tokens or casino chips. You’ll need to exchange real currency for the cryptocurrency to access the good or service. Cryptocurrencies work using a technology called blockchain. Blockchain is a decentralized technology spread across many computers that manages and records transactions. Part of the appeal of this technology is its security.
-		Cryptocurrency is a form of payment that can be exchanged online for goods and services. Many companies have issued their own currencies, often called tokens, and these can be traded specifically for the good or service that the company provides. Think of them as you would arcade tokens or casino chips. You’ll need to exchange real currency for the cryptocurrency to access the good or service. Cryptocurrencies work using a technology called blockchain. Blockchain is a decentralized technology spread across many computers that manages and records transactions. Part of the appeal of this technology is its security.
-		</p>
+		Cryptocurrencies work using a technology called blockchain. Blockchain is a decentralized technology spread across many computers that manages and records transactions. Part of the appeal of this technology is its security.		</p>
 
 	</div>
+	
 	<footer>
 		<p>Copyright &copy; 2021 Ivan Nikolić. <a href="https://github.com/ivan511?tab=repositories"></a></p>
 	</footer>
+	</main>
 
 </body>
 </html>
