--- a/news2.html
+++ b/news2.html
@@ -25,9 +25,10 @@
 		<ul>
 			<li class="crumb"><a href="index.html">Home</a></li>
 			<li class="crumb"><a href="news.html">News</a></li>
-			<li class="crumb"><a href="#">Contact</a></li>
-			<li class="crumb"><a href="#">About us</a></li>
-			<li class="crumb"><a href="#">Galery</a></li>
+			<li class="crumb"><a href="contact.html">Contact</a></li>
+			<li class="crumb"><a href="about.html">About us</a></li>
+			<li class="crumb"><a href="galery.html">Galery</a></li>
+
 		</ul>
 		</nav>
 	</header>
